--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <h4 class="modal-title">About</h4>
           </div>
           <div class="modal-body">
-            <p>This is an implementation of the <a href="http://en.wikipedia.org/wiki/Prisoner's_dilemma">prisoner's dilemma</a> applied to a spatial grid, based on a well-known paper by <a href="http://www.ped.fas.harvard.edu/people/faculty/publications_nowak/Nature92.pdf">Nowak and May</a>.</p>
+            <p>This is an implementation of the <a href="http://en.wikipedia.org/wiki/Prisoner's_dilemma">prisoner's dilemma</a> applied to a spatial grid, based on a well-known paper by <a href="http://abel.math.harvard.edu/archive/153_fall_04/Additional_reading_material/Evolutionary_games_and_spatial_chaos.pdf">Nowak and May</a>.</p>
             <div class="row">
               <div class="col-lg-6">
                 <table>
